# ea-cv-job-matcher

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  req.json
artifacts/: data_distribution.json  data_quality_report.md  eval_per_sample.csv  eval_ready_summary.md  eval_results.json  eval_summary.md  phase2_baseline_reference.json  phase3_comparison.json  phase3_comparison_table.md  synthetic_dataset.json
artifacts/phase3_models/: hist_gradient_boosting.joblib  linear_svm_calibrated.joblib  linear_svm_sgd_modified_huber.joblib  logistic_regression.joblib
config/: monitoring_thresholds.json  promotion_criteria.json
data/processed/: dataset_v1.jsonl
docs/: api-contract.md  architecture.md  deployment-guide.md  integration-guide.md  phase2-data-quality.md  phase3-promotion-criteria.md  phase3-training-plan.md  phase4-promotion-checklist.md  phase4-registry.md  phase6-audit-package.md  phase6-monitoring-dashboard-spec.md  phase6-retraining-workflow.md  phase6-roadmap.md  rollback-runbook.md  runbook.md  sla-slo.md
registry/: model_card.schema.json  registry.json
registry/model_cards/: baseline_tfidf_v1.json
scripts/: export_audit_package.py  generate_model_card_schema.py  generate_synthetic_data.py  run_evaluation.py  run_periodic_eval.py  run_phase2_pipeline.py  run_phase3_comparison.py  validate_registry.py
src/api/: main.py  routes.py
tests/: test_api.py  test_phase2_data_quality.py  test_phase3_smoke.py  test_phase5_serving.py  test_phase6_scripts.py  test_registry.py  test_score_contract_parity.py  test_scoring.py
(+18 files in other folders)
